build/log/idf_py_stderr_output_16583
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c: In function 'app_main':
/home/zeng/share/gateway/LowConfGateway/main/hello_world_main.c:573:48: error: expected expression before ';' token
  573 |             config.dataBits = UART_DATA_8_BITS,;
      |                                                ^
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76：esp-idf/main/CMakeFiles/__idf_main.dir/hello_world_main.c.obj] 错误 1
make[2]: *** [CMakeFiles/Makefile2:5751：esp-idf/main/CMakeFiles/__idf_main.dir/all] 错误 2
make[1]: *** [CMakeFiles/Makefile2:2455：CMakeFiles/flash.dir/rule] 错误 2
make: *** [Makefile:312：flash] 错误 2
